<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_customer_information_textview_customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_cusomter_information_customer_name_text" />

    <EditText
        android:id="@+id/dialog_customer_information_edittext_customer_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/dialog_customer_information_textview_customer_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_cusomter_information_customer_prefix_text" />

    <Spinner
        android:id="@+id/dialog_customer_information_spinner_customer_prefix"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/dialog_cusomter_information_customer_prefix_prompt" 
        android:entries="@array/dialog_cusomter_information_customer_prefix"/>

    <TextView
        android:id="@+id/dialog_cusomter_information_textview_customer_telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_cusomter_information_customer_telephone_label" />

    <EditText
        android:id="@+id/dialog_cusomter_information_edittext_customer_telephone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/dialog_cusomter_information_textview_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_cusomter_information_store_label" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:prompt="@string/dialog_cusomter_information_store_label" 
        android:entries="@array/dialog_cusomter_information_store"/>
    

</LinearLayout>